welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:33: error: value Blue is not a member of object java.awt.Color
  setCouleurBrosse(Color.Blue)
                         ^